index.html app.js -> topic-1-pbjects-classes.js topic-1.html topic-2.html

--- a/topic-1.html
+++ b/topic-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Object Oriented Programming</title>
+    <title>Topic 1 - Objects and Classes</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -12,9 +12,6 @@
     </style>
 </head>
 <body>
-    <h1>Object Oriented Programming Topics</h1>
-    <h3><a href="topic-1.html">Topic 1 - Objects and Classes</a></h3>
-    <h3><a href="topic-2.html">Topic 2 - Methods</a></h3>
     <h1>Hello World of OOP hehe</h1>
     <h1 id="person1-name"></h1>
     <h1 id="person1-age"></h1>
@@ -43,6 +40,5 @@
 
 
     </script>
-<a href="topic-1.html">Topic 1 - Objects and Classes</a>
 </body>
-</html>
+</html> 
