--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h1>Object Oriented Programming Topics</h1>
     <h3><a href="topic-1.html">Topic 1 - Objects and Classes</a></h3>
     <h3><a href="topic-2.html">Topic 2 - Methods</a></h3>
+    <h3><a href="topic-3.html">Topic 3 - Access Modifiers and Encapsulation</a></h3>
     <h1>Hello World of OOP hehe</h1>
     <h1 id="person1-name"></h1>
     <h1 id="person1-age"></h1>
