--- a/topic-4.html
+++ b/topic-4.html
@@ -80,7 +80,7 @@
         }
 
         // Creating an instance of the Student class
-        const studentOne = new Student('Cliff', 23, 'Instructor', 'Information Technology');
+        const studentOne = new Student('Cholo', 21, 'Student', 'Information Technology');
 
         // Calling methods
         studentOne.displayInfo();
