--- a/topic-1.html
+++ b/topic-1.html
@@ -21,7 +21,7 @@
     <script>
        //Input
         const person1 ={
-            name:"CHRISTIAN CHOLO LLENAS",
+            name:"Christian Cholo Llenas",
             age:21,
             occupation:"hqr"
         }
@@ -41,4 +41,4 @@
 
     </script>
 </body>
-</html> 
+</html>
