--- a/topic-3.html
+++ b/topic-3.html
@@ -61,7 +61,7 @@
 
 
         // Creating an object (instance) of the Person class
-        const personOne = new Person('Cliff', 23, 'Instructor');
+        const personOne = new Person('Christian Cholo Llenas');
 
         // Calling methods
         personOne.displayInfo();  
